# llm-system-design

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  annotation_analysis.py  bank.py  eval.py  lib.py  models.yaml  package-lock.json  pyproject.toml  questions.yaml  run.py  run_interview.py  run_judges.py  test_reasoning.py
.github/workflows/: deploy.yml
leaderboard/: build_site.py  test_site.py  validate_mermaid.mjs
leaderboard/starlight/: .gitignore  astro.config.mjs  package-lock.json  package.json
leaderboard/templates/: about.md  index.md
runs/claude-sonnet-4.6/: ai-coding-agent_cold.json  ai-coding-agent_cold.md  chat-system_cold.json  chat-system_cold.md  design-twitter_cold.json  design-twitter_cold.md  design-youtube_cold.json  design-youtube_cold.md  distributed-rate-limiter_cold.json  distributed-rate-limiter_cold.md  global-object-store_cold.json  global-object-store_cold.md  job-scheduler_cold.json  job-scheduler_cold.md  metrics-aggregation_cold.json  metrics-aggregation_cold.md  news-feed_cold.json  news-feed_cold.md  rag-search-assistant_cold.json  rag-search-assistant_cold.md  url-shortener_cold.json  url-shortener_cold.md
runs/deepseek-v4-pro/: ai-coding-agent_cold.json  ai-coding-agent_cold.md  chat-system_cold.json  chat-system_cold.md  design-twitter_cold.json  design-twitter_cold.md  design-youtube_cold.json  design-youtube_cold.md  distributed-rate-limiter_cold.json  distributed-rate-limiter_cold.md  global-object-store_cold.json  global-object-store_cold.md  job-scheduler_cold.json  job-scheduler_cold.md  news-feed_cold.json  (+7 more)
(+469 files in other folders)
