[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sd-interview"
version = "0.1.0"
description = "LLM System Design Benchmark"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=2.0",
    "python-dotenv>=1.0",
    "markdown>=3.0",
]

[project.scripts]
sd-bench = "run:main"
sd-run = "run_interview:main"
sd-judge = "run_judges:main"
sd-eval = "eval:main"

[tool.setuptools]
py-modules = [
    "lib",
    "bank",
    "run",
    "run_interview",
    "run_judges",
    "eval",
]
